# bb-bot-weird

./: .gitignore  Cargo.toml  convert.sh  out.txt  partitions.csv  wokwi.toml
.cargo/: config.toml
.gitea/workflows/: rust_ci.yml
.github/workflows/: rust_ci.yml
src/: config.rs  error.rs  lib.rs
