[package]
edition = "2021"
name = "bb-bot-weird"
version = "0.1.0"

[[bin]]
name = "bb-bot-weird"
path = "./src/bin/async_main.rs"

[dependencies]
esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", rev = "1806f8f622b08a9b54de91814eea13c6b3d9ff1c", features = [
  "esp32s3",
] }
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "defmt",
  "esp32s3",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "0.23.1", features = ["defmt", "esp32s3", "unstable"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "utils",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32s3"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
smart-leds = "0.4.0"
esp-hal-smartled = { version = "0.14", git = "https://github.com/esp-rs/esp-hal-community/", rev = "ad75112ae5d4b4fe2fe927356dc281283cafedfc" }
reqwless = { version = "0.13.0", features = ["defmt", "alloc"] }
anyhow = { version = "1.0.95", default-features = false }
#botifactory-types = { git = "https://github.com/izzyhub/botifactory-types" }
botifactory-types = { path = "../botifactory-types" }
thiserror = { version = "2.0.11", default-features = false }
serde = { version = "1.0.216", default-features = false, features = [
  "alloc",
  "derive",
] }
serde-json-core = { version = "0.6.0", features = ["heapless", "defmt"] }
#display_json = "0.2.1"
semver = { version = "1.0.25", default-features = false, features = ["serde"] }
bytes = { version = "1.10.0", default-features = false, features = [
  "serde",
  "extra-platforms",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

#[profile.release.package."*"]
#opt-level = 'z'

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
#strip = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
panic = 'abort'
